fix(ui): responsive GSAP horizontal scrolling and visibility issues

--- a/src/components/styles/Work.css
+++ b/src/components/styles/Work.css
@@ -170,13 +170,23 @@
 }
 
 @media only screen and (max-width: 1024px) {
+  .work-section {
+    height: auto;
+  }
   .work-box {
-    width: 350px;
-    padding: 30px;
+    width: 100%;
+    padding: 40px 0;
+    border-right: none;
+    border-bottom: 1px solid #363636;
   }
   .work-flex {
-    margin-left: -30px;
-    padding-right: 45px;
+    margin-left: 0;
+    padding-right: 0;
+    flex-direction: column;
+  }
+  .work-flex::before,
+  .work-flex::after {
+    display: none;
   }
 }
 
